fix category button bug were they were wrapping into 2 rows

--- a/receptsajten grupp4/src/components/startsida/startsida.css
+++ b/receptsajten grupp4/src/components/startsida/startsida.css
@@ -42,6 +42,13 @@
   background: rgba(255, 255, 255, 0.4);
 }
 
+.hero nav {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 10px;
+  justify-content: center;
+}
+
 /* Drink List */
 .drink-list {
   display: grid;
